--- a/Jamoma/modules/spatialization/sur.race~/jmod.sur.race~.html
+++ b/Jamoma/modules/spatialization/sur.race~/jmod.sur.race~.html
@@ -70,6 +70,17 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionDescription"> delaytime for the crosstalk cancelling [µseconds] </td>
 		<tr>
 		<tr>
+			<td class="instructionName"> filtertype </td>
+			<td class ="instructionType"> symbol </td>
+			<th class = "instructionRangeBounds"> N/A </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> type of the filter for separating the bands </td>
+		<tr>
+		<tr>
 			<td class="instructionName"> gain </td>
 			<td class ="instructionType"> float </td>
 			<td class ="instructionRangeBounds"> 0.000000 127.000000 </td>
@@ -89,7 +100,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 			<td class ="instructionRampFunction"> none </td>
 			<td class ="instructionDataspace"> pitch </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
-			<td class ="instructionDescription"> Low-Mid X-over frequency  </td>
+			<td class ="instructionDescription">  </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> midHigh </td>
