--- a/Jamoma/modules/control/file_browser/jmod.file_browser.html
+++ b/Jamoma/modules/control/file_browser/jmod.file_browser.html
@@ -49,7 +49,7 @@ body {	margin: 0px;	font-family: Arial, Helvetica, sans-serif;}h1 {	font-size: 2
 		<tr>
 		<tr>
 			<td class="instructionName"> file </td>
-			<td class ="instructionType"> list </td>
+			<td class ="instructionType"> symbol </td>
 			<th class = "instructionRangeBounds"> N/A </td>
 			<td class ="instructionRangeClipmode"> none </td>
 			<td class ="instructionRampDrive"> none </td>
