--- a/Jamoma/modules/spatialization/sur.speaker.delay~/jmod.sur.speaker.delay~.html
+++ b/Jamoma/modules/spatialization/sur.speaker.delay~/jmod.sur.speaker.delay~.html
@@ -48,6 +48,17 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDescription"> When active, this attribute bypasses the module's processing algtorithm, letting audio or video pass through unaffected </td>
 		<tr>
 		<tr>
+			<td class="instructionName"> automatic </td>
+			<td class ="instructionType"> toggle </td>
+			<td class ="instructionRangeBounds"> 0 1 </td>
+			<td class ="instructionRangeClipmode"> none </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> none </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> position based calculation (automatic) or manual setting of delays. </td>
+		<tr>
+		<tr>
 			<td class="instructionName"> numSpeakers </td>
 			<td class ="instructionType"> int </td>
 			<td class ="instructionRangeBounds"> 1 32 </td>
@@ -57,6 +68,17 @@ Number of signal outlets: <code> 0 </code> </p>
 			<td class ="instructionDataspace"> none </td>
 			<td class ="instructionRepetitionsAllow"> 0 </td>
 			<td class ="instructionDescription"> The number of audio channels that the ambisonic signal is diffused to. Changes only take effect when audio is off. </td>
+		<tr>
+		<tr>
+			<td class="instructionName"> temperature </td>
+			<td class ="instructionType"> float </td>
+			<td class ="instructionRangeBounds"> -273.000000 40.000000 </td>
+			<td class ="instructionRangeClipmode"> low </td>
+			<td class ="instructionRampDrive"> none </td>
+			<td class ="instructionRampFunction"> none </td>
+			<td class ="instructionDataspace"> temperature </td>
+			<td class ="instructionRepetitionsAllow"> 0 </td>
+			<td class ="instructionDescription"> temperature to calculate speed of sound. </td>
 		<tr>
 		<tr>
 			<td class="instructionName"> ui/freeze </td>
